--- a/index.html
+++ b/index.html
@@ -21,6 +21,26 @@
     - The freeCodeCamp Team
 
     -->
+
+
+    <!-- 
+      Your portfolio should have a welcome section with an id of welcome-section
+      The welcome section should have an h1 element that contains text
+      Your portfolio should have a projects section with an id of projects
+      The projects section should contain at least one element with a class of project-tile to hold a project
+      The projects section should contain at least one link to a project
+      Your portfolio should have a navbar with an id of navbar
+    -->
+
+    <nav id="navbar"></nav>
+    <section id="welcome-section">
+      <h1>Hello</h1>
+    </section>
+    <section id="projects">
+      <section class="project-tile"></section>
+      <a href="#">Link</a>
+    </section>
+
     <script  src="js/index.js"></script>
   </body>
 </html>
