second round html completed, some css added

--- a/index.html
+++ b/index.html
@@ -9,38 +9,42 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <!--
+   
+    <nav id="navbar">
 
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
+      <ul>
+        <a href="#welcome-section">About</a>
+        <a href="#projects">Work</a>
+        <a href="#features">Contact</a>
+      </ul>
+    </nav>
 
 
-    <!-- 
-      Your portfolio should have a welcome section with an id of welcome-section
-      The welcome section should have an h1 element that contains text
-      Your portfolio should have a projects section with an id of projects
-      The projects section should contain at least one element with a class of project-tile to hold a project
-      The projects section should contain at least one link to a project
-      Your portfolio should have a navbar with an id of navbar
-    -->
-
-    <nav id="navbar"></nav>
-    <section id="welcome-section">
-      <h1>Hello</h1>
+    <section id="welcome-section" class="center-all">
+      <div>  <h1>Hey I am Mimic</h1>
+     <p class="center-horizontal">a fullstack developer</p></div>
     </section>
+
     <section id="projects">
-      <section class="project-tile"></section>
-      <a href="#">Link</a>
+       <a href="" class="project-tile">
+        <img src="" alt="">
+        <p><span></span></p>
+      </a>
+    </section>
+    <section >
+      <a href="" target="_blank" id="profile-link"></a>
     </section>
 
     <script  src="js/index.js"></script>
   </body>
 </html>
+
+<style>
+  @media (max-width: 765px){
+  nav{
+      display: block;
+   
+  }
+ 
+}
+</style>
