--- a/index.html
+++ b/index.html
@@ -26,10 +26,34 @@
     </section>
 
     <section id="projects">
-       <a href="" class="project-tile">
-        <img src="" alt="">
-        <p><span></span></p>
-      </a>
+      <h2 class="heading">These are some of my projects</h2>
+      <hr>
+      <div class="cards">
+        <a href="" class="project-tile">
+          <img src="" alt="">
+          <p><span></span></p>
+        </a>
+        <a href="" class="project-tile">
+          <img src="" alt="">
+          <p><span></span></p>
+        </a>
+        <a href="" class="project-tile">
+          <img src="" alt="">
+          <p><span></span></p>
+        </a>
+        <a href="" class="project-tile">
+          <img src="" alt="">
+          <p><span></span></p>
+        </a>
+        <a href="" class="project-tile">
+          <img src="" alt="">
+          <p><span></span></p>
+        </a>
+        <a href="" class="project-tile">
+          <img src="" alt="">
+          <p><span></span></p>
+        </a>
+      </div>
     </section>
     <section >
       <a href="" target="_blank" id="profile-link"></a>
