Finished the grid section

--- a/index.html
+++ b/index.html
@@ -42,29 +42,44 @@
       <h2 class="heading">These are some of my projects</h2>
       <hr>
       <div class="cards">
+        <a href="" class="project-tile first">
+          <div>
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="first">
+            <p class="center-horizontal"><span>Tribute Page</span></p>
+          </div>
+        </a>
+        <a href="" class="project-tile second">
+          <div>
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png" alt="Second">
+            <p class="center-horizontal"><span>Random Quote Machine</span></p>
+          </div>
+        </a>
+        <a href="" class="project-tile third">
+          <div>
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" alt="third">
+            <p class="center-horizontal"><span>Javascript Calculator</span></p>
+          </div>
+        </a>
+      </div>
+
+      <div class="cards">
         <a href="" class="project-tile">
-          <img src="" alt="">
-          <p><span></span></p>
+          <div>
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg" alt="fourth">
+            <p class="center-horizontal"><span>Map Data Across the Globe</span></p>
+          </div>
         </a>
         <a href="" class="project-tile">
-          <img src="" alt="">
-          <p><span></span></p>
+          <div>
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png" alt="fifth">
+            <p class="center-horizontal"><span>Wikipedia Viewer</span></p>
+          </div>
         </a>
         <a href="" class="project-tile">
-          <img src="" alt="">
-          <p><span></span></p>
-        </a>
-        <a href="" class="project-tile">
-          <img src="" alt="">
-          <p><span></span></p>
-        </a>
-        <a href="" class="project-tile">
-          <img src="" alt="">
-          <p><span></span></p>
-        </a>
-        <a href="" class="project-tile">
-          <img src="" alt="">
-          <p><span></span></p>
+          <div>
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png" alt="sixth">
+            <p class="center-horizontal"><span>Tic Tac Toe Game</span></p>
+          </div>
         </a>
       </div>
     </section>
