bottom-secctions-made

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
@@ -83,8 +84,26 @@
         </a>
       </div>
     </section>
-    <section >
-      <a href="" target="_blank" id="profile-link"></a>
+    <section id="profile-section" class="center-all">
+
+      <a href="" target="_blank" id="profile-link">
+      <i class="fa fa-github" style="font-size:60px;"></i>
+      <p>GitHub</p>
+      </a>
+
+      <a href="" target="_blank" id="profile-link">
+        <i class="fa fa-facebook" style="font-size:60px;"></i>
+        <p>Facebook</p>
+        </a>
+
+        <a href="" target="_blank" id="profile-link">
+          <i class="fa fa-youtube" style="font-size:60px;"></i>
+          <p>Youtube</p>
+          </a>
+    </section>
+
+    <section id="bottom-section">
+      <p class="center-horizontal">Made by David and Kidus on Microverse Challange</p>
     </section>
 
     <script  src="js/index.js"></script>
