Finished show all button

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
           </div>
         </a>
       </div>
+
+      <div class="btn center-horizontal">SHOW ALL &nbsp; <i class="fa fa-arrow-right"></i> </div>
     </section>
     <section id="profile-section" class="center-all">
 
